tests/codegen/fail/union/struct_same_type_ugly.stderr
error[E0119]: conflicting implementations of trait `MutuallyExclusive` for type `Test`
 --> fail/union/struct_same_type_ugly.rs:8:10
  |
8 | #[derive(GraphQLUnion)]
  |          ^^^^^^^^^^^^
  |          |
  |          first implementation here
  |          conflicting implementation for `Test`
  |
  = note: this error originates in the macro `::juniper::sa::assert_type_ne_all` which comes from the expansion of the derive macro `GraphQLUnion` (in Nightly builds, run with -Z macro-backtrace for more info)
